fixed blurry css on words

--- a/styles/global.css
+++ b/styles/global.css
@@ -49,6 +49,6 @@
   display: contents;
 }
 
-.glass {
+/* .glass {
   filter: blur(16px) saturate(200%);
-}
+} */
